icons for OS2008
svn-id: r38750

--- a/dists/maemo/scummvm.desktop
+++ b/dists/maemo/scummvm.desktop
@@ -5,7 +5,7 @@ Type=Application
 Name=ScummVM
 Exec=/usr/games/scummvm
 Icon=scummvm
-X-Icon-path=/usr/share/icons
+#X-Icon-path=/usr/share/icons
 X-Window-Icon=scummvm
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
